--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,3 @@
 {
-    "framework": "nextjs",
-    "cleanUrls": true,
-    "rewrites": [
-        {
-            "source": "/((?!api/|_next/|static/|favicon.ico).*)",
-            "destination": "/"
-        }
-    ]
+    "framework": "nextjs"
 }
